# Compiler-Design-and-Construction

./: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp
debug/: catch_main.cpp  lexer_tests.cpp  parser_tests.cpp
debug/catch2/: catch.hpp
debug/samples/: average.jack  custom.jack  eof.jack  types.jack
release/: lexer.cpp  lexer.h  main.cpp  main.h  parser.cpp  parser.h  symbolTable.cpp  symbolTable.h
src/: lexer.cpp  lexer.h  main.cpp  main.h  parser.cpp  parser.h  symbolTable.cpp  symbolTable.h  symbol_table.cpp  symbol_table.h
tests/: lexer_tests.cpp  parser_tests.cpp
tests/samples/: average.jack  custom.jack  eof.jack  parser.jack  types.jack
